# JUCE-Plugin-Starter

./: .clang-format  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  dependencies.sh  generate_and_open_xcode.sh  init-new-juce-plugin.sh  init_plugin_project.sh  plan.txt
.cursor/rules/: plugin_starter.mdc
.github/workflows/: build.yml
Source/: AutoUpdater.h  AutoUpdater_Linux.cpp  AutoUpdater_Mac.mm  AutoUpdater_Win.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp
Tools/DiagnosticKit/: .env.example  DiagnosticKit.entitlements  Package.swift  README.md
Tools/DiagnosticKit/JUCE/: CMakeLists.txt  README.md
Tools/DiagnosticKit/JUCE/Source/: AppConfig.cpp  AppConfig.h  DiagnosticCollector.cpp  DiagnosticCollector.h  GitHubUploader.cpp  GitHubUploader.h  Main.cpp  MainComponent.cpp  MainComponent.h  PlatformDiagnostics.h  PlatformDiagnostics_Linux.cpp  PlatformDiagnostics_Win.cpp
Tools/DiagnosticKit/Scripts/: build_app.sh
Tools/DiagnosticKit/Sources/: DiagnosticApp.swift
Tools/DiagnosticKit/Sources/Config/: AppConfig.swift
Tools/DiagnosticKit/Sources/Services/: DiagnosticCollector.swift  GitHubUploader.swift
Tools/DiagnosticKit/Sources/Views/: MainView.swift
ai/: learnings.md  progress.md
benchmarks/: AudioProcessing.cpp  Catch2Main.cpp
docs/: 00-audit-overview.md  01-feature-comparison.md  02-visage-platform-support.md  03-priority-roadmap.md  04-branch-strategy.md  ci-production-plan.md  cross-platform-learnings.md  cross-platform-plan.md  cross-platform-ralph-prompt.md  cross-platform-testing-guide.md  cross-platform-testing-plan.md  integration-plan.md  linux-work-tracker.md  port-command-spec.md  ralph-loop-testing-prompt.md  testing-checklist.md
installer/: EULA.txt  TERMS.txt.example  Welcome.txt.example  distribution.xml.example  postinstall.example
integrate/: .env.example  CLAUDE.md  CMakeLists.txt
plans/: update-repo.md
prompts/: README.md  audio-midi-settings-prompt.md  diagnostic-logging-prompt.md  modulation-automation-specs.md  spillover-tail-buffer-system.md
scripts/: build.ps1  build.sh  dependencies.sh  diagnose_plugin.sh  export_signing_certs.sh  generate_and_open_xcode.sh  generate_release_notes.py  generate_release_notes_with_claude.sh  init_plugin_project.sh  initialize_JUCE-plugin_project.sh  post_build.sh  setup_diagnostic_repo.sh  setup_sparkle.sh  setup_uv_environment.sh  setup_visage.sh  setup_winsparkle.sh  sign_and_package_plugin.sh  uninstall_template.sh  update_download_links.sh  validate_plugin.sh
scripts/about/: RELEASE_NOTES_METHOD.md  release_notes_improvements.md  release_notes_usage.md
scripts/patches/visage/: 01-performKeyEquivalent.patch  02-mtkview-60fps.patch  03-popup-overflow-position.patch  04-single-line-arrows.patch  05-setAlwaysOnTop-guard.patch  06-instance-counter-log.patch  07-mtkview-null-check.patch
templates/: index.html.template  installer.iss  website.html.template
templates/visage/: JuceVisageBridge.cpp  JuceVisageBridge.h  PluginEditor.cpp  PluginEditor.h
tests/: Catch2Main.cpp  PluginBasics.cpp
tests/helpers/: test_helpers.h
todo/: init-update.sh  update-plans.md
